; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_w32_keyboard.c_lookup_keymap.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_w32_keyboard.c_lookup_keymap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.keymap = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.keymap*, i32)* @lookup_keymap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lookup_keymap(%struct.keymap* %0, i32 %1) #0 {
  %3 = alloca %struct.keymap*, align 8
  %4 = alloca i32, align 4
  store %struct.keymap* %0, %struct.keymap** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %5

5:                                                ; preds = %18, %2
  %6 = load %struct.keymap*, %struct.keymap** %3, align 8
  %7 = getelementptr inbounds %struct.keymap, %struct.keymap* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %5
  %11 = load %struct.keymap*, %struct.keymap** %3, align 8
  %12 = getelementptr inbounds %struct.keymap, %struct.keymap* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %13, %14
  br label %16

16:                                               ; preds = %10, %5
  %17 = phi i1 [ false, %5 ], [ %15, %10 ]
  br i1 %17, label %18, label %21

18:                                               ; preds = %16
  %19 = load %struct.keymap*, %struct.keymap** %3, align 8
  %20 = getelementptr inbounds %struct.keymap, %struct.keymap* %19, i32 1
  store %struct.keymap* %20, %struct.keymap** %3, align 8
  br label %5

21:                                               ; preds = %16
  %22 = load %struct.keymap*, %struct.keymap** %3, align 8
  %23 = getelementptr inbounds %struct.keymap, %struct.keymap* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
